force-app/main/default/objects/PDRI__Deployment_Plan_Item__c/PDRI__Deployment_Plan_Item__c.object-meta.xml
<CustomObject>
    <description>Encapsulate a data set to be deployed as part of a step.</description>
    <label>Deployment Plan Item</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Deployment Plan Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>