force-app/main/default/objects/PDRI__Deployment_Plan_Item__c/fields/PDRI__DataSet__c.field-meta.xml
<CustomField>
    <fullName>PDRI__DataSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specifies the data set to deploy.</inlineHelpText>
    <label>Data Set</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PDRI__DataSet__c.PDRI__Root__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PDRI__DataSet__c</referenceTo>
    <relationshipLabel>Deployment Plan Items</relationshipLabel>
    <relationshipName>Deployment_Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>