force-app/main/default/objects/PDRI__Deployment_Plan_Item__c/fields/PDRI__Deployment_Plan__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Plan</label>
    <referenceTo>PDRI__Deployment_Plan__c</referenceTo>
    <relationshipLabel>Deployment Plan Items</relationshipLabel>
    <relationshipName>Deployment_Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>