force-app/main/default/objects/PDRI__Deployment_Plan_Item__c/fields/PDRI__Deployment_Plan_Step__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Plan_Step__c</fullName>
    <inlineHelpText>Specifies the deployment plan step to which this item belongs.</inlineHelpText>
    <label>Deployment Plan Step</label>
    <referenceTo>PDRI__Deployment_Plan_Step__c</referenceTo>
    <relationshipLabel>Deployment Plan Items</relationshipLabel>
    <relationshipName>Deployment_Plan_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>