force-app/main/default/objects/PDRI__Deployment_Plan_Item__c/fields/PDRI__Deployment_Plan_Step_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Plan_Step_Order_Number__c</fullName>
    <formula>PDRI__Deployment_Plan_Step__r.PDRI__Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Plan Step Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>