force-app/main/default/objects/PDRI__Deployment_Plan_Item__c/fields/PDRI__View_Item__c.field-meta.xml
<CustomField>
    <fullName>PDRI__View_Item__c</fullName>
    <formula>HYPERLINK(Id,&apos;View Item&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Item</label>
    <type>Text</type>
</CustomField>